# subscription-intelligence

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp.json  pyproject.toml
data/: subscriptions.json
subscription_intelligence_mcp/: __init__.py  agent_state.py  calendar_export.py  chat_cli.py  config.py  conversation_memory.py  dashboard.py  intelligence.py  llm_chat.py  llm_explainer.py  llm_router.py  notifier.py  requirements.txt  storage.py  subscription_mcp.py  subscription_operator.py  subscriptions.ics  validators.py
subscription_intelligence_mcp/data/: subscriptions.json
tests/: test_mcp_tools.py  test_validators.py
