[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subscription-intelligence"
version = "0.1.0"
description = "Autonomous subscription intelligence agent with MCP and LLM support"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Arunmozhi", email = "arunmozhi@example.com" }
]

dependencies = [
  "python-dotenv",
  "rich",
  "pydantic",
  "python-dateutil",
  "requests",
  "mcp",
  "fastmcp",
  "streamlit"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov"
]

[tool.setuptools]
packages = ["subscription_intelligence_mcp"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
